feat (Article): Add Article schedule type and swagger
