# Modules/Article/app/Http/Controllers/ArticleController.php
@@ -3,24 +3,25 @@
 namespace Modules\Article\app\Http\Controllers;
 
 use App\CacheTrait;
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
 use App\Http\Controllers\Controller;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Cache;
-use Modules\Article\app\Http\Requests\UpdateArticleRequest;
 use Modules\Article\app\Models\Article;
 use Modules\Article\app\Transformers\ArticleResource;
-use Modules\Article\Http\Requests\StoreArticleRequest;
+use Modules\Article\app\Http\Requests\StoreArticleRequest;
+use Modules\Article\app\Http\Requests\UpdateArticleRequest;
 
 class ArticleController extends Controller
 {
-    use CacheTrait;
+    use CacheTrait, AuthorizesRequests;
 
     public function index(Request $request): JsonResponse
     {
         $cache_key = 'articles_index_' . md5($request->fullUrl());
-        $articles = Cache::tags('articles')->remember($cache_key, 60, function () use ($request) {
-            return Article::filter($request->all())->with('category', 'author')->paginate(10);
+        $articles = Cache::remember($cache_key, 60, function () use ($request) {
+            return Article::whereStatus('published')->filter($request->all())->with('category', 'author')->paginate(10);
         });
 
         $this->remember_dynamic_keys('article_cache_keys', $cache_key);
